--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,3 +1,4 @@
+---
 # For most projects, this workflow file will not need changing; you simply need
 # to commit it to your repository.
 #
@@ -9,7 +10,7 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: CodeQL
 
 on:
   push:
@@ -18,7 +19,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [dev]
   schedule:
-    - cron: '15 8 * * 6'
+    - cron: 15 8 * * 6
 
 jobs:
   analyze:
@@ -32,9 +33,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ['python']
-        # CodeQL supports ['cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby']
-        # Learn more about CodeQL language support at https://git.io/codeql-language-support
+        language: [python]
+        # CodeQL supports
+        #   ['cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby']
+        # Learn more about CodeQL language support at
+        #   https://git.io/codeql-language-support
 
     steps:
       - name: Checkout repository
@@ -45,24 +48,29 @@ jobs:
         uses: github/codeql-action/init@v1
         with:
           languages: ${{ matrix.language }}
-          # If you wish to specify custom queries, you can do so here or in a config file.
-          # By default, queries listed here will override any specified in a config file.
-          # Prefix the list here with "+" to use these queries and those in the config file.
+          # If you wish to specify custom queries, you can do so here
+          #   or in a config file.
+          # By default, queries listed here will override any specified
+          #   in a config file.
+          # Prefix the list here with "+" to use these queries and those
+          #    in the config file.
           # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-      # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-      # If this step fails, then you should remove it and run the build manually (see below)
+      # Autobuild attempts to build any compiled languages
+      #    (C/C++, C#, or Java).
+      # If this step fails, then you should remove it and run the build
+      #    manually (see below)
       - name: Autobuild
         uses: github/codeql-action/autobuild@v1
 
       # ℹ️ Command-line programs to run using the OS shell.
       # 📚 https://git.io/JvXDl
 
-      # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
-      #    and modify them (or add more) to build your code if your project
-      #    uses a compiled language
+      # ✏️ If the Autobuild fails above, remove it and uncomment the
+      #    following three lines and modify them (or add more) to build your
+      #    code if your project uses a compiled language
 
-      #- run: |
+      # - run: |
       #   make bootstrap
       #   make release
 
