--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+---
 name: Release
 
 on:
@@ -16,9 +17,11 @@ jobs:
         id: version
         uses: home-assistant/actions/helpers/version@master
 
-      - name: "Set version number"
-        run: |
-          python3 ${{ github.workspace }}/.github/scripts/update_hacs_manifest.py --version ${{ steps.version.outputs.version }}
+      - name: Set version number
+        run: >-
+          python3
+          ${{ github.workspace }}/.github/scripts/update_hacs_manifest.py
+          --version ${{ steps.version.outputs.version }}
       - name: Create zip
         run: |
           cd custom_components/zha_toolkit
