--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,6 +73,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
+          - pyproject-flake8==0.0.1a2
           - flake8-bugbear==22.1.11
           - flake8-comprehensions==3.8.0
           - flake8_2020==1.6.1
