--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@ repos:
         language: python
         types: [markdown]
         args: [--wrap, '75', --number]
+        additional_dependencies:
+          - mdformat-toc
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
