Initial setup file with test config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,2 @@
-[flake8]
-ignore =
-    W503
-max-complexity  = 20
-max-line-length = 184
-show-source = True
-count = True
-statistics = True
+[tool:pytest]
+asyncio_mode=strict
